--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,6 @@ coreapi==2.3.3
 coreschema==0.0.4
 Django==3.2
 django-cors-headers==3.7.0
-django-environ==0.4.5
 djangorestframework==3.12.4
 idna==2.10
 itypes==1.2.0
@@ -17,6 +16,7 @@ MarkupSafe==1.1.1
 mypy-extensions==0.4.3
 pathspec==0.8.1
 Pillow==8.2.0
+python-dotenv==0.17.0
 pytz==2021.1
 PyYAML==5.4.1
 regex==2021.4.4
