--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -16,8 +16,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
         pip install -r requirements.txt
-    - name: Analysing the code with pylint
+    - name: Lint with black
       run: |
-        pylint `ls -R|grep .py$|xargs`
+        pip install black
+        black .
