--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 Django==3.2
 django-cors-headers==3.7.0
+django-filter==2.4.0
 djangorestframework==3.12.4
 idna==2.10
 itypes==1.2.0
