--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Django==3.2
 django-cors-headers==3.7.0
 django-filter==2.4.0
 djangorestframework==3.12.4
+drf-extensions==0.7.0
 idna==2.10
 itypes==1.2.0
 Jinja2==2.11.3
