--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ MarkupSafe==1.1.1
 mypy-extensions==0.4.3
 pathspec==0.8.1
 Pillow==8.2.0
+psycopg2==2.8.6
 python-dotenv==0.17.0
 pytz==2021.1
 PyYAML==5.4.1
