--- a/.github/workflows/django_CI.yml
+++ b/.github/workflows/django_CI.yml
@@ -10,23 +10,37 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: [3.7, 3.8, 3.9]
+    
+    services: 
+      postgres:
+        image: postgres:10.8
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: github_actions
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+    - uses: actions/checkout@v1
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v1
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.9
+    - name: psycopg2 Prerequisites
+      run: sudo apt-get install libpq-dev
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - uses: harmon758/postgresql-action@v1
+      with:
+        postgresql version: '11'  # See https://hub.docker.com/_/postgres for available versions
+    - name: Run Migrations
+      run: python manage.py migrate
     - name: Run Tests
       env: 
-        SECRET_KEY: (7%%+-g7t51cal3+3#j^)9**-fe=d7rk!_!&)5z656s5$v%q#6
+        SECRET_KEY: ${{secrets.SECRET_KEY}}
       run: |
         python manage.py test
