--- a/.github/workflows/django_CI.yml
+++ b/.github/workflows/django_CI.yml
@@ -34,13 +34,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - uses: harmon758/postgresql-action@v1
-      with:
-        postgresql version: '11'  # See https://hub.docker.com/_/postgres for available versions
     - name: Run Migrations
       run: python manage.py migrate
     - name: Run Tests
       env: 
         SECRET_KEY: ${{secrets.SECRET_KEY}}
-      run: |
-        python manage.py test
+      run: py.test
