--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
 appdirs==1.4.4
 asgiref==3.3.3
+attrs==20.3.0
+autobahn==21.3.1
+Automat==20.2.0
 black==20.8b1
 certifi==2020.12.5
+cffi==1.14.5
+channels==3.0.3
 chardet==4.0.0
 click==7.1.2
+constantly==15.1.0
 coreapi==2.3.3
 coreschema==0.0.4
+cryptography==3.4.7
+daphne==3.0.2
 dj-database-url==0.5.0
 Django==3.2
 django-cors-headers==3.7.0
@@ -13,9 +21,12 @@ django-filter==2.4.0
 django-heroku==0.3.1
 djangorestframework==3.12.4
 drf-extensions==0.7.0
+drf-nested-routers==0.93.3
 geographiclib==1.50
 gunicorn==20.1.0
+hyperlink==21.0.0
 idna==2.10
+incremental==21.3.0
 itypes==1.2.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
@@ -23,15 +34,25 @@ mypy-extensions==0.4.3
 pathspec==0.8.1
 Pillow==8.2.0
 psycopg2==2.8.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pyOpenSSL==20.0.1
 python-dotenv==0.17.0
 pytz==2021.1
 PyYAML==5.4.1
 regex==2021.4.4
 requests==2.25.1
+service-identity==18.1.0
+six==1.15.0
 sqlparse==0.4.1
 toml==0.10.2
+Twisted==21.2.0
+twisted-iocpsupport==1.0.1
+txaio==21.2.1
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
 uritemplate==3.0.1
 urllib3==1.26.4
 whitenoise==5.2.0
+zope.interface==5.4.0
