--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ click==7.1.2
 click-didyoumean==0.0.3
 click-plugins==1.1.1
 click-repl==0.1.6
+cloudinary==1.25.0
 constantly==15.1.0
 coreapi==2.3.3
 coreschema==0.0.4
@@ -24,6 +25,7 @@ dj-database-url==0.5.0
 Django==3.2
 django-celery-beat==2.2.0
 django-celery-results==2.0.1
+django-cloudinary-storage==0.3.0
 django-cors-headers==3.7.0
 django-filter==2.4.0
 django-heroku==0.3.1
@@ -61,6 +63,8 @@ service-identity==18.1.0
 six==1.15.0
 sqlparse==0.4.1
 toml==0.10.2
+Twisted==21.2.0
+twisted-iocpsupport==1.0.1
 txaio==21.2.1
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
